--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Artists</title>
+  <title>AutoSalon</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js" integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
@@ -11,7 +11,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container d-flex justify-content-between">
-    <a class="navbar-brand" href="/posts">Artists</a>
+    <a class="navbar-brand" href="/cars">Auti</a>
+    <a class="navbar-brand" href="/locations">Lokacije</a>
+
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -21,11 +23,8 @@
         <li class="nav-item dropdown">
           <a th:text="${user.getFullName()}" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li class="nav-item">
-             <a class="nav-link" href="/profile">&nbsp; Moj profil</a>
-            </li>
             <li>
-              <form th:action="@{/logout}" method="post">
+              <form th:action="@{/logout}" method="POST">
                 <input class="dropdown-item" type="submit" value="Odjavite se"/>
               </form>
             </li>
@@ -40,7 +39,7 @@
     <nav class="col-2 d-md-block sidebar collapse">
       <div class="position-sticky pt-3 sidebar-sticky">
         <ul class="nav nav-pills flex-column">
-      <!--    <li class="nav-item"><a th:class="${#strings.equals(activeLink, 'Posts')} ? 'nav-link active' : 'nav-link'" href="/posts">Objave</a></li>
+      <!--    <li class="nav-item"><a th:class="${#strings.equals(activeLink, 'Posts')} ? 'nav-link active' : 'nav-link'" href="/cars">Objave</a></li>
         <li class="nav-item"><a th:class="${#strings.equals(activeLink, 'Proizvodi')} ? 'nav-link active' : 'nav-link'" href="/articles">Proizvodi</a></li> -->
         </ul>
       </div>
