--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Registrirajte se na sustav</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <title>Registrirajte se na sustav</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
         <form th:action="@{/register_user}"
               th:object="${user}" method="post">
           <div th:if="${success==true}" class="alert alert-success">
-            Uspješno ste se registrirali prijavite se <a href="/login">ovdje</a>.
+            Uspješno ste se registrirali, prijavite se <a href="/login">ovdje</a>.
           </div>
 
           <div>
@@ -27,12 +27,6 @@
             <label class="form-label"></label>
             <input class="form-control" th:classappend="${#fields.hasErrors('lastname') ? 'is-invalid' : ''}" type="text" placeholder="Unesite Vaše prezime" th:field="*{lastname}" />
             <div th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}" class="invalid-feedback"></div> <!-- Ukoliko ima greški vezanih uz ime korisnika prikaži ih.  -->
-          </div>
-
-          <div>
-            <label class="form-label"></label>
-            <input class="form-control" th:classappend="${#fields.hasErrors('username') ? 'is-invalid' : ''}" type="text" placeholder="Unesite Vaše korisničko ime" th:field="*{username}" />
-            <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="invalid-feedback"></div>
           </div>
 
           <div>
